--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@ng-bootstrap/ng-bootstrap": "^6.0.3",
     "@tinymce/tinymce-angular": "^3.5.0",
     "angular-calendar": "^0.28.28",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.6.0",
     "date-fns": "^2.16.1",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.3"
